# feishu_paper

./: .env.example  .env.template  .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  arxiv_core.py  arxiv_hydra.py  docker-compose.yml  feishu_bitable_connector.py  feishu_chat_notification.py  get_token.py  manage.ps1  paper_display.py  pyproject.toml  requirements.txt  setup.py  setup_feishu.py  setup_wizard.py  sync_to_feishu.py  test_new_logic.py
.github/workflows/: ci.yml
autopaper/: LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
autopaper/cli/: __init__.py  main.py
autopaper/config/: all.yaml  default.yaml  sync_2_locomotion_control.yaml  sync_3_mobile_manipulation.yaml  sync_4_whole_body_imitation.yaml
autopaper/core/: __init__.py  arxiv_processor.py  paper_ranker.py
autopaper/core/feishu/: __init__.py  bitable.py  config.py  connector.py  notification.py  sync.py  table_manager.py
autopaper/utils/: __init__.py
conf/: 3_mobile_manipulation.yaml  4_whole_body_imitation.yaml  all.yaml  default.yaml  llm_robotics.yaml  locomotion_control.yaml  mobile_manipulation.yaml  sync_1_llm_robotics.yaml  sync_2_locomotion_control.yaml  sync_3_mobile_manipulation.yaml  sync_4_whole_body_imitation.yaml  sync_5_text2motion_retargeting.yaml  sync_6_diffusion_il_rl.yaml  sync_7_vln.yaml  whole_body_imitation.yaml  your_config.yaml
conf/examples/: ai_ml.yaml  all_fields.yaml  robotics.yaml
docker/: README.md  crontab
docs/: architecture.md  configuration.md  development.md
scripts/: README.md  README_daily_sync.md  crontab_daily_sync  daily_arxiv_sync.sh  health_check.py  quick_start.sh  scheduled_sync.py  setup_daily_sync.sh
src/autopaper/: __init__.py  __main__.py  arxiv_core.py  arxiv_hydra.py  cli.py  feishu_bitable_connector.py  feishu_chat_notification.py  get_token.py  hydra_app.py  paper_display.py  sync_to_feishu.py  terminal.py
src/autopaper/arxiv/: __init__.py  categories.py  client.py  config.py  download.py  models.py  parsing.py  query.py  search.py
src/autopaper/cli/: __init__.py  main.py
src/autopaper/config/: 1_llm_robotics.yaml  2_locomotion_control.yaml  3_mobile_manipulation.yaml  all.yaml  default.yaml  sync_1_llm_robotics.yaml  sync_2_locomotion_control.yaml  sync_5_text2motion_retargeting.yaml  sync_6_diffusion_il_rl.yaml  sync_7_vln.yaml  your_config.yaml
src/autopaper/configuration/: __init__.py  keywords.py  loader.py  network.py  runtime.py  validation.py
src/autopaper/core/: __init__.py  api.py  ranking.py  search.py
src/autopaper/display/: __init__.py  advanced.py  console.py  displayer.py  reports.py
src/autopaper/feishu/: __init__.py  auth.py  bitable.py  config.py  dates.py  errors.py  fields.py  notification_client.py  notification_config.py  notification_messages.py  notification_service.py  notifications.py  paper_mapping.py  records.py  sync.py  sync_result.py  tables.py  tokens.py  views.py
src/autopaper/ranking/: __init__.py  advanced.py  keywords.py  ranker.py  scoring.py
src/autopaper/scripts/: configure_project.sh  crontab_daily_sync  daily_arxiv_sync.sh  setup_daily_sync.sh
src/autopaper/sync/: __init__.py  runner.py
src/autopaper/templates/: env.template
test/: check_chat_permissions.py  run_all_tests.py  test_arxiv_link.py  test_chat_notification.py  test_detailed_display.py  test_or_logic.py  test_sync_simulation.py  test_table_links.py  test_view_debug.py  test_view_final.py  test_view_sorting_fix.py  test_view_summary.py  test_view_update_fix.py  test_views.py
tests/: README.md  run_all_tests.py  run_all_tests_old.py  test_feishu_sync.py  test_master_consistency.py  test_modular_refactor.py  test_package.py
tests/integration/: test_fixed_real.py  test_real_world.py  test_simplified_real.py
tests/legacy/: test_basic_functionality.py  test_complete_workflow.py
tests/smoke/: test_network_smoke.py
tools/: README.md  manager.py  setup_windows_task.py  simple_sync.py  sync_unix.sh  sync_windows.bat
