[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autopaper"
version = "0.1.0"
description = "Collect, rank, and sync arXiv papers to Feishu Bitable."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "AutoPaper contributors" }]
maintainers = [{ name = "AutoPaper contributors" }]
keywords = ["arxiv", "feishu", "papers", "research", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "arxiv>=2.1.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.2.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=5.4.0",
    "rapidfuzz>=3.0.0",
    "requests>=2.25.0",
    "rich>=13.7.0",
]

[project.urls]
Homepage = "https://github.com/caozx1110/feishu_paper"
Documentation = "https://github.com/caozx1110/feishu_paper#readme"
Issues = "https://github.com/caozx1110/feishu_paper/issues"
Source = "https://github.com/caozx1110/feishu_paper"

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[dependency-groups]
dev = [
    "build>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[tool.uv]
package = true

[project.scripts]
autopaper = "autopaper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
autopaper = ["config/*.yaml", "scripts/*", "templates/*", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "network: live arXiv tests that require internet connectivity",
]

[tool.ruff]
line-length = 120
target-version = "py310"
